# zopeext

./: .flake8  .gitignore  .hgignore  .hgtags  .init-file.bash  .readthedocs.yaml  CHANGES  LICENSE  Maintainers.md  Makefile  README.MAINTAINER  README.md  README.rst  noxfile.py  noxutils.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: tests.yaml
Docs/: README.rst  conf.py  example.py  index.rst
doc/: conf.py  index.rst
sphinxcontrib/zopeext/: __init__.py  autointerface.py  example.py
src/sphinxcontrib/zopeext/: __init__.py  autointerface.py
tests/: conftest.py  example.py  test_autointerface.py  test_ext_zopeext.py
tests/examples/: conf.py  example.py  index.rst
tests/examples/_build/html/: index.html
tests/roots/test-zopeext-autointerface/: conf.py  index.rst
