[tool.pdm]
[project]
name = "sphinxcontrib-zopeext"
version = "0.4.0.dev0"
description = "Provides sphinxcontrib.zopeext.autointerface for documenting Zope interfaces."
authors = [
    {name = "Michael McNeil Forbes", email = "mforbes@alum.mit.edu"},
]
dependencies = [
    'zope.interface>=5.5.2',
    'Sphinx >= 4.5.0',
]
requires-python = ">=3.7"
readme = "README.rst"
license = {text = "BSD-2-Clause"}

[project.optional-dependencies]
test = [
    'importlib-metadata>=4.8.3; python_version < "3.8"',
    'pip>=22.2.1',
    'pytest-cov>=4.0.0',
    "sphinx-testing>=1.0.1",
    "pytest>=7.2.2",
]
doc = [
    "sphinx-book-theme>=0.0.39",
    "sphinx-autobuild>=2021.3.14",
]

[tool.pdm.dev-dependencies]
dev = [
    "sphinxcontrib-zopeext[test,doc]"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [
    #"src/sphinxcontrib/zopeext",
    "tests",
]
addopts = [
    "--doctest-modules",
    "--cov=sphinxcontrib.zopeext",
    "--cov-report=html",
    "--cov-fail-under=85",
    "--no-cov-on-fail",
    #"-x",
    "--pdb",
    #"--flake8",
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
]
